<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_new_deck_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/deck_title" />

    <EditText
        android:id="@+id/dialog_new_deck_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" 
        android:hint="@string/deck_description" />

    <EditText
        android:id="@+id/dialog_new_deck_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" 
        android:hint="@string/deck_format" />

    <View
        android:id="@+id/dialog_new_deck_seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_new_deck_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="5dp"
            android:background="@drawable/btn_holo_light_gray" />
        
        <Button
            android:id="@+id/dialog_new_deck_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:padding="5dp"
            android:background="@drawable/btn_holo_light_blue" />
    </LinearLayout>

</LinearLayout>